--- a/styles/main.css
+++ b/styles/main.css
@@ -103,6 +103,7 @@ nav {
   padding: 1rem 1rem;
   width: 100%;
   text-align: center;
+  cursor: pointer;
 }
 .section__link.show {
   opacity: 1;
@@ -179,13 +180,12 @@ nav {
   padding: 0.25rem;
 }
 .weather__wind {
-  flex-basis: 50%;
+  margin-right: 0.5rem;
   display: flex;
   align-items: center;
   white-space: nowrap;
 }
 .weather__hum {
-  flex-basis: 50%;
   display: flex;
   align-items: center;
 }
@@ -194,12 +194,11 @@ nav {
   display: flex;
 }
 .weather__sunrise {
-  flex-basis: 50%;
+  margin-right: 0.5rem;
   display: flex;
   align-items: center;
 }
 .weather__sunset {
-  flex-basis: 50%;
   display: flex;
   align-items: center;
 }
