--- a/styles/_vars.scss
+++ b/styles/_vars.scss
@@ -12,5 +12,5 @@ $ro-devin: #e8ec2b;
 $ro-slovensko: #3a9dd8;
 $ro-international: #661e90;
 $ro-klasika: #a7a9ac;
-$ro-junior: #a7a9ac;
+$ro-junior: #c2a00a;
 $ro-litera: #a7a9ac;
