--- a/styles/main.css
+++ b/styles/main.css
@@ -15,6 +15,10 @@ html {
   display: inline-block;
 }
 
+a:hover, a:focus, button:hover, button:focus {
+  outline: none;
+}
+
 /*grid*/
 html, body {
   width: 100vw;
@@ -265,40 +269,44 @@ nav {
 .radio__wrapper {
   flex-basis: 100%;
 }
-.radio__inner {
+.radio__radios {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: space-between;
   align-items: flex-start;
-}
-.radio__radios {
-  flex-grow: 1;
 }
 .radio__button {
   appearance: none;
-  width: 25%;
-  height: 33%;
+  display: block;
+  width: calc(25% - 1.25rem);
+  height: 30vh;
   color: #000;
   background-color: #fff;
   border: none;
-  font-size: 2rem;
+  font-size: 1.5rem;
+  margin: 0 1.25rem 1.25rem 0;
+  opacity: 0.9;
 }
 .radio__button .material-icons {
   display: block;
-  font-size: 3rem;
-  margin-bottom: 1rem;
+  font-size: 4rem;
+  margin: 1.5rem 0;
+  transition: all 0.3s;
   opacity: 0.5;
+  transform: scale(1);
 }
-.radio__button--junior {
-  background-image: linear-gradient(to right, #f4333e, #f37a37, #8bc63f, #9197ca, #ea4098, #781b80);
-  color: #fff;
+.radio__button .material-icons + .material-icons {
+  position: absolute;
+  display: none;
 }
-.radio__button--fm {
-  background-color: #e3002b;
-  color: #fff;
+.radio__button.play {
+  opacity: 1;
 }
-.radio__button--slovensko {
-  background-color: #3a9dd8;
-  color: #fff;
+.radio__button.play .material-icons {
+  display: none;
+  opacity: 1;
+  transform: scale(1.5);
+}
+.radio__button.play .material-icons + .material-icons {
+  display: block;
 }
