--- a/styles/main.css
+++ b/styles/main.css
@@ -286,6 +286,7 @@ nav {
   font-size: 1.5rem;
   margin: 0 1.25rem 1.25rem 0;
   opacity: 0.9;
+  overflow: hidden;
 }
 .radio__button .material-icons {
   display: block;
@@ -296,7 +297,6 @@ nav {
   transform: scale(1);
 }
 .radio__button .material-icons + .material-icons {
-  position: absolute;
   display: none;
 }
 .radio__button.play {
