--- a/styles/main.css
+++ b/styles/main.css
@@ -287,26 +287,17 @@ nav {
   margin: 0 1.25rem 1.25rem 0;
   opacity: 0.9;
   overflow: hidden;
+  position: relative;
 }
 .radio__button .material-icons {
   display: block;
-  font-size: 4rem;
-  margin: 1.5rem 0;
+  position: absolute;
+  top: 0.5rem;
+  right: 0.5rem;
+  font-size: 3rem;
   transition: all 0.3s;
-  opacity: 0.5;
-  transform: scale(1);
-}
-.radio__button .material-icons + .material-icons {
-  display: none;
-}
-.radio__button.play {
-  opacity: 1;
+  opacity: 0;
 }
 .radio__button.play .material-icons {
-  display: none;
   opacity: 1;
-  transform: scale(1.5);
-}
-.radio__button.play .material-icons + .material-icons {
-  display: block;
 }
