--- a/styles/_radio.scss
+++ b/styles/_radio.scss
@@ -47,5 +47,26 @@
                 opacity: 1;
             }
         }
+        &--pause{
+            appearance: none;
+            padding: 0;
+            margin: 0;
+            border: none;
+            position: fixed;
+            display: flex;
+            align-items: center;
+            top: 1rem;
+            right: 1rem;
+            z-index: 1000;
+            background-color: transparent;
+            color: rgba($base, .5);
+            font-size: 1.25rem;
+            .material-icons{
+                font-size: 3rem;
+                color: $primary;
+                line-height: 3rem;
+                margin-left: .25rem;
+            }
+        }
     }
 }
