--- a/styles/_grid.scss
+++ b/styles/_grid.scss
@@ -41,7 +41,7 @@ main{
 }
 
 nav{
-    background-color: rgba($baseinv, 80%);
+    background-color: rgba($baseinv, .8);
     display: flex;
     flex-direction: column;
     overflow: auto;
