--- a/styles/main.css
+++ b/styles/main.css
@@ -74,7 +74,7 @@ main {
 }
 
 nav {
-  background-color: black;
+  background-color: rgba(0, 0, 0, 0.8);
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -393,6 +393,85 @@ nav {
       flex-basis: 12%;
   text-align: center;
   margin-bottom: 2rem;
+}
+
+.forecast__chart {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  height: 500px;
+  overflow: auto;
+  padding: 0 0 1rem 0;
+}
+
+.forecast__col {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  height: 100%;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
+  padding: 1px;
+  -ms-flex-preferred-size: 5rem;
+      flex-basis: 5rem;
+}
+
+.forecast__col--day {
+  width: 1px;
+  border-left: 1px dashed rgba(255, 255, 255, 0.25);
+  position: -webkit-sticky;
+  position: sticky;
+  left: 0;
+}
+
+.forecast__col--day span {
+  display: inline-block;
+  padding: 0 .25rem;
+  font-size: 1rem;
+  text-transform: capitalize;
+}
+
+.forecast__col:hover .forecast__temp-col--plus, .forecast__col:focus .forecast__temp-col--plus {
+  background-color: rgba(218, 165, 32, 0.5);
+}
+
+.forecast__col:hover .forecast__temp-col--minus-col, .forecast__col:focus .forecast__temp-col--minus-col {
+  background-color: rgba(255, 255, 255, 0.5);
+}
+
+.forecast__temp {
+  padding-bottom: .5rem;
+}
+
+.forecast__temp-col {
+  width: 4rem;
+}
+
+.forecast__temp-col--plus {
+  background-color: rgba(218, 165, 32, 0.25);
+}
+
+.forecast__temp-col--minus-col {
+  background-color: rgba(255, 255, 255, 0.25);
+}
+
+.forecast__time {
+  padding: .5rem .25rem .25rem .25rem;
+}
+
+.forecast__wind {
+  margin-top: .5rem;
+  font-size: .75rem;
 }
 
 .section--radio__inner {
