--- a/styles/_devices.scss
+++ b/styles/_devices.scss
@@ -32,11 +32,14 @@
         overflow: hidden;
         position: relative;
         transition: all .3s;
+        &:hover, &:focus{
+            opacity: 1;
+        }
         .material-icons{
             display: block;
             font-size: 4rem;
             margin: 1.5rem;
-
+            
         }
     }
 }
